# exa-language-server

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
exa-language-server/: Cargo.toml
exa-language-server/src/: documents.rs  exalang.rs
src/: document.rs  documentation.rs  grammar.json  highlight.rs  lib.rs  location.rs  node-types.json  node.rs  parser.c  request.rs  response.rs
test/: regenerate.py
test/corpus/: addi.txt  copy.txt  divi.txt  drop.txt  file.txt  fjmp.txt  grab.txt  halt.txt  host.txt  jump.txt  kill.txt  link.txt  make.txt  mark.txt  mode.txt  modi.txt  muli.txt  noop.txt  rand.txt  repl.txt  seek.txt  subi.txt  swiz.txt  test.txt  tjmp.txt  void.txt  wipe.txt
tree-sitter-exa/: Cargo.toml  README.md  grammar.js
tree-sitter-exa/bindings/rust/: lib.rs
tree-sitter-exa/queries/: highlights.scm
tree-sitter-exa/src/: grammar.json  node-types.json  parser.c
tree-sitter-exa/test/: regenerate.py
tree-sitter-exa/test/corpus/: addi.txt  comment.txt  copy.txt  fjmp.txt  halt.txt  host.txt  jump.txt  kill.txt  link.txt  mark.txt  mode.txt  muli.txt  repl.txt  test.txt  tjmp.txt
