[package]
name = "tree-sitter-exa"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter grammar for the EXA programming language from Zachtronics' EXAPUNKS."
readme = "README.md"
repository = "https://github.com/ethall/tree-sitter-exa"
license = "MIT"
keywords = [
    "tree-sitter",
    "parser",
    "exa",
    "exapunks",
    "zachtronics"
]
categories = [
    "development-tools",
    "parser-implementations"
]

build = "bindings/rust/build.rs"

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"
lsp-server = "~0.5.0"

[build-dependencies]
cc = "1.0"
tree-sitter-cli = "~0.20.0"
