[package]
name = "exa-language-server"
version = "0.1.0"
edition = "2021"
description = "Language server for the EXA programming language from Zachtronics' EXAPUNKS."
readme = "../README.md"
repository = "https://github.com/ethall/exa-language-server"
license = "MIT"
keywords = [
    "tree-sitter",
    "parser",
    "exa",
    "exapunks",
    "zachtronics"
]
categories = [
    "development-tools",
    "parser-implementations"
]

[dependencies.tree-sitter-exa]
path = "../tree-sitter-exa"
version = "0.1.0"

[dependencies]
lsp-server = "~0.5.0"
